refactor: rename visited state to eaten
